# vig

./: .codacy.yaml  .env.example  .gitignore  .pyscn.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  COPYRIGHT.md  CUsersleoneAppDataLocalTempvig_diff.txt  DESIGN.md  Dockerfile  ISSUE_KANBAN.md  PRODUCT.md  README.md  design-ownix-preview.html  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json  test_automatic_deployment.txt  transcript_server.py
.impeccable/: design.json
docs/: 203-walkthrough.md  TASK-GROUPING.md  TASK.md  backfill_agreed_plan.md  dev-merge-plan.md  frontend-TASK.md  headless CRM.md  launch-implementation-order.md  parked-feature-handoff.md  roadmap.md  task21 context broader.md  todo-notes.md
plans/: 001-mobile-overflow-fix.md  002-mobile-sidebar-drawer.md  README.md
scripts/: auth_drive.py  backfill_article_og_images.py  backfill_brain.py  backfill_short_thumbnails.py  dev_new_user_login.py  migrate_status_checks.py  notify_pending_invites.py  ops-ngrok-e2e.sh
src/: analysis.py  api.py  brain.py  config.py  database.py  main.py  queue.py  templates.py  validation.py  worker.py
tests/: test_analysis.py  test_api_validation_models.py  test_article_pipeline.py  test_auth.py  test_backfill.py  test_backfill_article_og_images.py  test_background_tasks.py  test_brain.py  test_config.py  test_controls_validation.py  test_database.py  test_document_ingest.py  test_document_processor.py  test_enrichment.py  test_export_gate.py  test_gemini_client.py  test_gemini_photo.py  test_github.py  test_health.py  test_jina.py  (+28 more)
(+470 files in other folders)
