[project]
name = "vig"
version = "0.1.0"
description = "Video Intelligence Gateway — FastAPI service replacing an n8n workflow"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit real external APIs (gated behind RUN_INTEGRATION=1)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
